# Process this file with autoconf to produce a configure script.
#
# Hand written file: used as input into GNU Autotools (autoconf).
#
# This is the autoconf instructions to build FitsStats. FitsStats will
# read the FITS image statistics and print the important statistics
# and save a histogram. It is free software released under GNU GPLv3+.
#
# Copyright (C) 2014 Mohammad Akhlaghi
# Tohoku University Astronomical Institute, Sendai, Japan.
# http://astr.tohoku.ac.jp/~akhlaghi/

SUBDIRS = src
EXTRA_DIST = defaults.ac
